更新配置文件
